dmatest: add DIF support
Adding T-10 DIF support for DMA engines that support DIF operations.

Signed-off-by: Daniel Verkamp <daniel.verkamp@intel.com>
Signed-off-by: Ujjal Singh <ujjal.singh@intel.com>

--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -607,7 +607,7 @@ config ASYNC_TX_DMA
 
 config DMATEST
 	tristate "DMA Test client"
-	depends on DMA_ENGINE
+	depends on DMA_ENGINE && CRC_T10DIF
 	select DMA_ENGINE_RAID
 	help
 	  Simple DMA test client. Say N unless you're debugging a
